# Differometor-Benchmark

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DIFFEROMETOR_README.md  README.md  main.py  pyproject.toml  test_behaviours.txt
.github/workflows/: pr-conventional-commit.yml  pre-commit.yaml  tests.yaml
analysis/hessian_investigation/: adam_constrained_voyager_seed_73_lr_0.1_max_evals_20000_arcsinh_transform.npz  hessian_investigation.ipynb  hessian_investigation.py
dev/diffusion/: Diffusion (1).ipynb  preamble.py
docs/: Algorithm-Status.md  Algorithms.md  Architecture-Overview.md  Benchmarking.md  FAQ.md  Home.md  Implementing-a-New-Algorithm.md  Installation.md  Metrics-Reference.md  Objective-API-Reference.md  Problems.md  Storage-and-Checkpointing.md  Testing.md  Utilities-and-Helpers.md  _Sidebar.md
docs/algorithm-status/: main.typ  template.typ
hessian_investigation/: hessian_investigation.ipynb  hessian_investigation.py
neural_surrogate/: __init__.py  data_format_specification.md  data_format_usage_guide.md  encodings.py  eval.py  inverse_design.py  model.py  pipeline.py  script.sh  train.py
optimization/: __init__.py
scripts/: __init__.py  benchmark_bo_batch.py  benchmark_mads_example.py  combine_and_benchmark.py  thomas_voyager_adam_gd.py  uifo_adam_gd.py  uifo_diverse_sweep.py  uifo_na_adam_gd.py  uifo_optax_scipy_sweep.py  voyager_adam_gd.py  voyager_basin_hopping.py  voyager_batched_adam_gd.py  voyager_benchmark.py  voyager_bo.py  voyager_botorch_bo.py  voyager_botorch_turbo.py  voyager_cd.py  voyager_cma_family.py  voyager_cmaes.py  voyager_dual_annealing.py  voyager_evox_es.py  voyager_evox_pso.py  voyager_lbfgs_gd.py  voyager_native_jax_custom_batch.py  voyager_nelder_mead.py  voyager_nevergrad.py  voyager_omads.py  voyager_powell.py  voyager_powell_dfo.py  voyager_random_baseline.py  voyager_restir.py  voyager_sa_gd.py  voyager_scipy_algos.py  voyager_scipy_benchmark.py  voyager_vae_sampling.py  voyager_velo.py
slurm/: run_voyager_adam.sbatch  run_voyager_cd.sbatch  setup_venv.sbatch
src/dfbench/: __init__.py  __main__.py
src/dfbench/algorithms/: __init__.py
src/dfbench/algorithms/derivative_free/: __init__.py  _dfo_common.py  _scipy_common.py  basin_hopping.py  dual_annealing.py  nelder_mead.py  omads_mads.py  powell.py  pybobyqa.py
src/dfbench/algorithms/derivative_free/pdfo/: __init__.py  lincoa.py  newuoa.py  uobyqa.py
src/dfbench/algorithms/direct_search/: __init__.py  _omads_wrapper.py  mads.py  omads_mads.py  orthomads.py
src/dfbench/algorithms/evolutionary/: __init__.py  cmaes_sep_cma.py  coordinate_descent.py  evosax_es.py  evox_es.py  evox_pso.py  jax_es.py  nevergrad_ngopt.py  nevergrad_oneplusone.py  nevergrad_tbpsa.py  pycma_cmaes.py  random_search.py
src/dfbench/algorithms/evolutionary/nevergrad/: __init__.py  _common.py  ngopt.py  oneplusone.py  tbpsa.py
src/dfbench/algorithms/generative/: vae_sampling.py
src/dfbench/algorithms/global_search/: __init__.py  basin_hopping.py  dual_annealing.py  random_search.py
src/dfbench/algorithms/gradient_based/: __init__.py  _scipy_common.py  adam_gd.py  batched_adam_gd.py  bfgs.py  cobyla.py  cobyqa.py  custom_jax.py  dogleg.py  lbfgs.py  lbfgs_gd.py  lbfgsb.py  na_adam_gd.py  newton_cg.py  nonlinear_cg.py  optax_adabelief.py  optax_adadelta.py  optax_adafactor.py  optax_adagrad.py  optax_adam.py  optax_adamax.py  optax_adamaxw.py  optax_adamw.py  optax_adan.py  optax_amsgrad.py  optax_lamb.py  optax_lbfgs.py  optax_lion.py  optax_lookahead.py  optax_nadam.py  optax_nadamw.py  optax_noisy_sgd.py  optax_novograd.py  optax_oadam.py  optax_ogd.py  optax_polyak_sgd.py  optax_radam.py  optax_rmsprop.py  optax_rprop.py  optax_sam.py  (+13 more)
src/dfbench/algorithms/gradient_based/misc/: __init__.py  adam_gd.py  lbfgs_gd.py  na_adam_gd.py  optax_lbfgs.py  sa_gd.py
src/dfbench/algorithms/gradient_based/optax/: __init__.py  _common.py  adabelief.py  adadelta.py  adafactor.py  adagrad.py  adam.py  adamax.py  adamaxw.py  adamw.py  adan.py  amsgrad.py  lamb.py  lion.py  lookahead.py  nadam.py  nadamw.py  noisy_sgd.py  novograd.py  oadam.py  ogd.py  polyak_sgd.py  radam.py  rmsprop.py  rprop.py  (+7 more)
src/dfbench/algorithms/learned/: __init__.py  velo.py
src/dfbench/algorithms/surrogate_based/: __init__.py  _botorch_common.py  ax_baxus.py  ax_saasbo.py  botorch_bo.py  botorch_gebo.py  botorch_linebo.py  botorch_qkg.py  botorch_qnei.py  botorch_rembo.py  botorch_turbo.py  hebo_bo.py  restir.py  smac_bo.py  turbo_lbfgs.py
src/dfbench/algorithms/utils/: gp.py  initial_design.py  misc.py  weighted_acq.py
src/dfbench/benchmark/: __init__.py  benchmark.py  metrics.py
src/dfbench/core/: __init__.py  _init_env.py  algorithm.py  constants.py  display.py  objective.py  parameter_config.py  parameters.py  problem.py  protocols.py  search_space.py  state.py  utils.py
src/dfbench/core/storage/: __init__.py  backends.py  exporter.py  manager.py  resolver.py  saveconfig.py  serializers.py  state.py
src/dfbench/problems/: __init__.py  base_problem.py  voyager_problem.py
src/dfbench/problems/uifo/: __init__.py  random_uifo_problem.py  uifo_problem.py
src/dfbench/problems/voyager/: __init__.py  constrained_voyager_problem.py  voyager_problem.py  voyager_tuning_problem.py
tests/: conftest.py  test_algorithm_protocol.py  test_algorithms_uniform.py  test_algorithms_unit.py  test_api_imports.py  test_benchmark_smoke.py  test_bo_batch.py  test_cma_family.py  test_config.py  test_custom_jax_batch.py  test_dfo_algorithms.py  test_direct_search.py  test_display.py  test_hebo_packaging.py  test_init_env.py  test_mads_algorithms.py  test_metrics.py  test_objective_invariants.py  test_objective_penalty_fn.py  test_objective_randomness.py  test_objective_space_mode.py  test_optax_batch.py  test_problem_bounds_overrides.py  test_problem_protocol.py  test_problem_spec.py  test_scipy_algorithms.py  test_scipy_wrapper.py  test_search_space_core.py  test_storage.py  test_utils.py
tests/slow/: test_algorithms_integration.py  test_benchmark_full.py  test_problem_bounds_gradients.py  test_problems_full.py
(+24 files in other folders)
