[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfbench"
version = "0.1.1"
description = "Differometor Benchmark - Optimization algorithms and problem definitions"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Artificial Scientist Lab" },
]
keywords = [
    "benchmark",
    "differentiable-simulation",
    "gravitational-wave-detectors",
    "jax",
    "optimization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "differometor==0.0.5",
    "jax==0.9.0.1",
    "jaxlib>=0.5.0",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.8",
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/artificial-scientist-lab/Differometor-Benchmark"
Repository = "https://github.com/artificial-scientist-lab/Differometor-Benchmark"
Documentation = "https://github.com/artificial-scientist-lab/Differometor-Benchmark/tree/main/docs"
Issues = "https://github.com/artificial-scientist-lab/Differometor-Benchmark/issues"

[project.optional-dependencies]
analysis = [
    "equinox>=0.13.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.1",
    "papermill>=2.7.0",
    "snakeviz>=2.2.2",
    "tueplots>=0.2.1",
]
cuda12 = [
    "jax[cuda12]==0.9.0.1",
]
cuda13 = [
    "jax[cuda13]==0.9.0.1",
]
dfo = [
    "OMADS>=2408.0",
    "pdfo>=2.2.0",
    "Py-BOBYQA>=1.5.0",
    "scipy>=1.15",
]
evolution = [
    "cma>=3.3.0",
    "cmaes>=0.10.0",
    "evox>=1.3.0",
    "evosax>=0.1.6",
    "nevergrad>=1.0.12",
    "torch>=2.9.1",
]
bo = [
    "ax-platform>=1.2.4",
    "botorch>=0.16.1",
    "gpytorch>=1.14",
    "torch>=2.9.1",
]
optax = ["optax>=0.2.6"]
pybobyqa = ["Py-BOBYQA>=1.5.0"]
scipy = ["scipy>=1.15"]
smac = ["smac>=2.4.0"]
torch = ["torch>=2.9.1"]
all = [
    "ax-platform>=1.2.4",
    "botorch>=0.16.1",
    "cma>=3.3.0",
    "cmaes>=0.10.0",
    "evox>=1.3.0",
    "evosax>=0.1.6",
    "gpytorch>=1.14",
    "nevergrad>=1.0.12",
    "OMADS>=2408.0",
    "optax>=0.2.6",
    "pdfo>=2.2.0",
    "Py-BOBYQA>=1.5.0",
    "scipy>=1.15",
    "smac>=2.4.0",
    "torch>=2.9.1",
]
test = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]

[tool.hatch.build]
exclude = [
    "/.github",
    "/.gitignore",
    "/.venv",
    "/analysis",
    "/batch-*.sh",
    "/data",
    "/dev",
    "/jobfiles_err",
    "/jobfiles_out",
    "/media",
    "/notes.md",
    "/plots",
    "/plots-scratch",
    "/scripts",
    "/temp",
    "/tmp.py",
    "/tmp.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dfbench"]

[tool.hatch.build.targets.sdist]
only-include = [
    "docs",
    "LICENSE",
    "pyproject.toml",
    "README.md",
    "src/dfbench",
    "tests",
]

[dependency-groups]
cuda12 = [
    "jax[cuda12]==0.9.0.1",
]
cuda13 = [
    "jax[cuda13]==0.9.0.1",
]
analysis = [
    "equinox>=0.13.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.1",
    "papermill>=2.7.0",
    "snakeviz>=2.2.2",
    "tueplots>=0.2.1",
]
test = [
    "pytest>=8.0",
    "pytest-timeout>=2.2",
]
dev = [
    "ruff>=0.14.8",
]
publish = [
    "build>=1.2",
    "twine>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that call Differometor simulation or run a real optimizer (>5s); requires srun.",
    "gpu: tests that require a CUDA device; must not block CPU-only CI.",
]
addopts = "-m 'not slow and not gpu' --tb=short -q"
